[package]
name = "grayarea"
version = "0.1.0"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ws = ["tungstenite", "tokio-tungstenite", "futures"]

[workspace]
members = ["grayarea-sdk", "polo-consumer", "grayarea-runtime"]

[dependencies]
wasmer-runtime = "0.11"
wasmer-runtime-core = "0.11"
wasmer-wasi = "0.11"
tungstenite = { version="0.9", optional=true, default_features=false }
tokio-tungstenite = { git="https://github.com/dbcfd/tokio-tungstenite", branch="tokio2", features=["tls"], optional=true }
tokio = { version="0.2", features=["rt-core", "blocking", "io-std", "io-util"] }
futures = { version="0.3", optional=true }
anyhow = "1"
crossbeam = "0.7"
url = { version="2.1", default_features=false }
