[package]
name = "grayarea"
version = "0.1.0"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ws = ["tungstenite", "tokio-tungstenite", "futures"]
wasm = ["wasmer-runtime", "wasmer-wasi"]

[workspace]
members = ["grayarea-sdk", "polo-consumer", "grayarea-runtime", "grayarea-desktop"]

[dependencies]
wasmer-runtime = { version="0.11", optional=true }
wasmer-wasi = { version="0.11", optional=true }
tungstenite = { version="0.9", optional=true, default_features=false }
tokio-tungstenite = { git="https://github.com/dbcfd/tokio-tungstenite", branch="tokio2", features=["tls"], optional=true }
tokio = { version="0.2", features=["rt-core", "blocking", "io-std", "io-util"] }
futures = { version="0.3", optional=true }
anyhow = "1"
url = { version="2.1", default_features=false }
ipc-channel = "0.12"
crossbeam = "0.7"
serde = { version="1", features=["derive"] }
bincode = "1.2.1"

[patch.'https://github.com/dunnock/poloniex-api-rs']
poloniex = { path = "../../trader/poloniex-api-rs", default_features=false }