[package]
name = "grayarea"
version = "0.3.0"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
ws = ["tungstenite", "tokio-tungstenite", "futures"]
wasm = ["wasmer-runtime", "wasmer-wasi"]

[workspace]
members = ["grayarea-sdk", "grayarea-runtime", "grayarea-desktop", "orchestrator", "examples/polo-consumer", "examples/throughput"]

[dependencies]
wasmer-runtime = { version="0.12", optional=true }
wasmer-wasi = { version="0.12", optional=true }
tungstenite = { version="0.9", optional=true, default_features=false }
tokio-tungstenite = { git="https://github.com/dbcfd/tokio-tungstenite", branch="tokio2", features=["tls"], optional=true }
tokio = { version="0.2", features=["fs", "rt-core", "blocking", "io-std", "io-util", "sync"] }
futures = { version="0.3", optional=true }
anyhow = "1"
crossbeam = "0.7"
bincode = "1.2.1"
orchestrator = { path = "orchestrator" }
serde = { version="1", features=["derive"] }
serde_yaml = "0.8"
url = { version="2.1", features=["serde"] }