[package]
name = "grayarea-desktop"
version = "0.1.0"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grayarea = { path=".." }
orchestrator = { path="../orchestrator" }
serde = { version = "1", features = ["derive"]}
serde_yaml = "0.8"
structopt = "0.3"
anyhow = "1"
tokio = { version = "0.2", features=["fs", "macros", "rt-core", "process"]}
futures = "0.3"
pretty_env_logger = "0.3"
log = "0.4"
