[package]
name = "grayarea-desktop"
version = "0.2.0"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grayarea = { path=".." }
ipc-orchestrator = "0.3"
serde_yaml = "0.8"
structopt = "0.3"
anyhow = "1"
tokio = { version = "0.2", features=["macros", "process", "rt-core", "rt-threaded"]}
futures = "0.3"
pretty_env_logger = "0.3"
log = "0.4"
crossbeam = "0.7"