[package]
name = "grayarea-runtime"
version = "0.1.0"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grayarea = { path = "..", features=["ws"] }
tungstenite = { version="0.9", default_features=false }
tokio = { version="0.2", features=["rt-core", "macros", "sync", "blocking", "fs"] }
futures = { version="0.3" }
anyhow = "1"
crossbeam = "0.7"
structopt = "0.3"
serde = { version="1", features=["derive"] }
serde_yaml = "0.8"
url = { version="2.1", features=["serde"] }
