[package]
name = "grayarea-runtime"
version = "0.4.0"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grayarea = { path = "..", features=["ws", "wasm"] }
tungstenite = { version="0.9", default_features=false }
tokio = { version="0.2", features=["rt-core", "rt-threaded", "macros", "sync", "blocking", "fs"] }
futures = { version="0.3" }
anyhow = "1"
crossbeam = "0.7"
structopt = "0.3"
ipc-channel = "0.13"
ipc-orchestrator = "0.3"
serde_yaml = "0.8"