[package]
name = "orchestrator"
version = "0.2.0"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version="0.2", features=["process", "rt-core", "blocking", "io-util"] }
ipc-channel = "0.13"
log = "0.4"
futures = "0.3"
anyhow = "1"
serde = { version="1", features=["derive"] }
serde_bytes = "0.11"
async-trait = "0.1"