[package]
name = "polo-consumer"
version = "0.1.0"
authors = ["Maksym Vorobiov <maxim.vorobjov@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
grayarea = { path = "../../grayarea-sdk", package="grayarea-sdk" }
poloniex = { git="https://github.com/dunnock/poloniex-api-rs", default_features=false }
